<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".NasaDailyImage" >

    <LinearLayout
        android:id="@+id/buttonpanel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="#FF8D8D8D"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="5dp" >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/refresh" 
            android:onClick="refreshContent">
        </Button>
        
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setWallpaperBtn" 
            android:onClick="setWallpaper">
        </Button>
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="fill_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            tools:context=".NasaDailyImage" >

            <TextView
                android:id="@+id/daily_image_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/test_image_title" />

            <TextView
                android:id="@+id/daily_image_updated_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/test_image_date" />

            <ImageView
                android:id="@+id/daily_image_picture"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/test_image_title"
                android:src="@drawable/test_image" />

            <TextView
                android:id="@+id/daily_image_description"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/test_image_description" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>